[gd_scene load_steps=6 format=2]

[ext_resource path="res://Interface/Buttons/Button.tscn" type="PackedScene" id=3]
[ext_resource path="res://Fonts/Default.tres" type="DynamicFont" id=5]
[ext_resource path="res://Scenes/RestartDialog/RestartDialog.gd" type="Script" id=6]

[sub_resource type="Theme" id=1]

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.266667, 0.254902, 0.423529, 1 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 0.901961, 0.741176, 0.231373, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="RestartDialog" type="PopupDialog"]
margin_left = 168.0
margin_top = 102.0
margin_right = 861.0
margin_bottom = 492.0
theme = SubResource( 1 )
custom_styles/panel = SubResource( 2 )
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 38.0
margin_top = 38.0
margin_right = 646.0
margin_bottom = 347.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer"]
margin_right = 608.0
margin_bottom = 152.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="RichTextLabel" type="RichTextLabel" parent="VBoxContainer/CenterContainer"]
margin_left = 254.0
margin_top = 26.0
margin_right = 354.0
margin_bottom = 126.0
rect_min_size = Vector2( 100, 100 )
rect_clip_content = false
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/normal_font = ExtResource( 5 )
text = "GAME OVER"
scroll_active = false

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 156.0
margin_right = 608.0
margin_bottom = 309.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="CenterContainer4" type="CenterContainer" parent="VBoxContainer/HBoxContainer2"]
margin_right = 302.0
margin_bottom = 153.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Restart" parent="VBoxContainer/HBoxContainer2/CenterContainer4" instance=ExtResource( 3 )]
margin_left = 71.0
margin_right = 231.0

[node name="CenterContainer5" type="CenterContainer" parent="VBoxContainer/HBoxContainer2"]
margin_left = 151.0
margin_top = 76.0
margin_right = 151.0
margin_bottom = 76.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Continue" parent="VBoxContainer/HBoxContainer2/CenterContainer5" instance=ExtResource( 3 )]
visible = false
margin_left = -80.0
margin_top = -32.0
margin_right = 80.0
margin_bottom = 32.0
text = "Continue"

[node name="CenterContainer3" type="CenterContainer" parent="VBoxContainer/HBoxContainer2"]
margin_left = 306.0
margin_right = 608.0
margin_bottom = 153.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Exit" parent="VBoxContainer/HBoxContainer2/CenterContainer3" instance=ExtResource( 3 )]
margin_left = 71.0
margin_right = 231.0
text = "Exit"

[node name="Tween" type="Tween" parent="."]
